workloads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-app
  namespace: flux
spec:
  type: ClusterIP
  ports:
  - port: 9898
    targetPort: 9898
  selector:
    app: flux-app
