workloads/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - flux.devit.io
    secretName: registry-tls
  rules:
  - host: hub.devit.io
    http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
